fixed cells overflowing text

--- a/public/stylesheets/layout4_text.css
+++ b/public/stylesheets/layout4_text.css
@@ -126,17 +126,17 @@
 .main-content .table_row_green {height:2.5em; background: #96c09c; border-top:solid 1px rgb(255,255,255); border-bottom:solid 1px rgb(255,255,255); color: #000000; margin-top: 0; margin-right: 0px; margin-bottom: 0; margin-left: 0px; padding: 0; text-align: center; font-weight:normal; color:rgb(80,80,80); font-size:120%;}
 .main-content .table_row_red {height:2.5em; background: #ff6666; border-top:solid 1px rgb(255,255,255); border-bottom:solid 1px rgb(255,255,255); color: #000000; margin-top: 0; margin-right: 0px; margin-bottom: 0; margin-left: 0px; padding: 0; text-align: center; font-weight:normal; color:rgb(80,80,80); font-size:120%;}
 .main-content .table_header_row {height:2.5em; background: #7cb4a9; border-top:solid 2px rgb(255,255,255); border-bottom:solid 1px rgb(255,255,255); color: #000000; margin-top: 0; margin-right: 0px; margin-bottom: 0; margin-left: 0px; padding: 0; text-align: center; font-weight:bold; color: #FFFFFF; font-size:120%;}
-.main-content .table_cell_20 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 20%; vertical-align: bottom;}
-.main-content .table_cell {border-right:solid 2px rgb(255,255,255); height:2.5em;}
-.main-content .table_cell_5 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 5%; vertical-align: bottom;}
-.main-content .table_cell_15 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 15%; vertical-align: bottom;}
-.main-content .table_cell_10 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 10%; vertical-align: bottom;}
-.main-content .table_cell_50 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 50%; vertical-align: bottom;}
-.main-content .table_cell_80 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 80%; vertical-align: bottom;}
-.main-content .table_cell_25 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 25%; vertical-align: bottom;}
-.main-content .table_cell_30 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 30%; vertical-align: bottom;}
-.main-content .table_cell_35 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 35%; vertical-align: bottom;}
-.main-content .table_cell_40 {border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 40%; vertical-align: bottom;}
+.main-content .table_cell_20 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 20%; vertical-align: bottom;}
+.main-content .table_cell {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em;}
+.main-content .table_cell_5 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 5%; vertical-align: bottom;}
+.main-content .table_cell_15 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 15%; vertical-align: bottom;}
+.main-content .table_cell_10 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 10%; vertical-align: bottom;}
+.main-content .table_cell_50 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 50%; vertical-align: bottom;}
+.main-content .table_cell_80 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 80%; vertical-align: bottom;}
+.main-content .table_cell_25 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 25%; vertical-align: bottom;}
+.main-content .table_cell_30 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 30%; vertical-align: bottom;}
+.main-content .table_cell_35 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 35%; vertical-align: bottom;}
+.main-content .table_cell_40 {overflow:hidden; border-right:solid 2px rgb(255,255,255); height:2.5em; float: left; width: 40%; vertical-align: bottom;}
 .main-content .table_row select {width:95%;padding:2px; border:solid 1px rgb(200,200,200); font-family:verdana,arial,sans-serif; font-size:110%;background: #e1e1e1;}
 .main-content .table_row_red select {width:95%;padding:2px; border:solid 1px rgb(200,200,200); font-family:verdana,arial,sans-serif; font-size:110%;}
 .main-content .table_row_green select {width:95%;padding:2px; border:solid 1px rgb(200,200,200); font-family:verdana,arial,sans-serif; font-size:110%;}
